--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -74,7 +74,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "❌ [ÉCHEC] Pipeline Jenkins - Tests échoués !"
+          subject: "❌ [ÉCHEC] Pipeline Jenkins - Tests échoués !!"
           to: "aboulayesamb@example.com"
           from: "GitHub Actions"
           body: "Certains tests ont échoué. Consulte Jenkins pour voir les logs."
