--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -2,10 +2,10 @@ name: CI Pipeline GestionNote
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Exécute le workflow toutes les 12 heures
+    - cron: "0 */12 * * *"  # Exécute toutes les 12 heures
   push:
     branches:
-      - main  # Déclenche l'exécution à chaque push sur la branche "main"
+      - main  # Déclenche l'exécution à chaque push sur "main"
   pull_request:
     branches:
       - main  # Déclenche l'exécution sur chaque PR vers "main"
@@ -15,28 +15,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name:  Checkout Repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name:  Installer PHP et Composer
+      - name: Installer PHP et Composer
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
           tools: composer
           coverage: none
 
-      - name:  Installer les dépendances PHP
+      - name: Installer les dépendances PHP
         run: composer install --no-progress --no-interaction
 
-      - name:  Installer Python et dépendances Selenium/ZAP
+      - name: Installer Python et dépendances Selenium/ZAP
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name:  Installer les dépendances Python
+      - name: Installer les dépendances Python
         run: |
           pip install -r requirements.txt
-          pip install zapv2 selenium
+          pip install zapv2 selenium webdriver-manager
+
+      - name: Installer Google Chrome et ChromeDriver
+        run: |
+          sudo apt update
+          sudo apt install -y wget unzip
+          sudo wget -O /usr/local/bin/chromedriver https://storage.googleapis.com/chrome-for-testing-public/122.0.6261.94/linux64/chromedriver-linux64.zip
+          sudo chmod +x /usr/local/bin/chromedriver
+          sudo apt install -y google-chrome-stable
+
+      - name: Vérifier l'installation de Chrome et ChromeDriver
+        run: |
+          google-chrome --version
+          chromedriver --version
 
       - name: Exécuter les tests Selenium (Test 1)
         run: python tests/selenium_tests.py
@@ -44,13 +57,13 @@ jobs:
       - name: Exécuter les tests Selenium (Test 2)
         run: python tests/selenium_test_pack_or.py
 
-      - name: 🕷Lancer Spider ZAP
+      - name: 🕷 Lancer Spider ZAP
         run: python tests/spider.py
 
       - name: Lancer Scan Actif ZAP
         run: python tests/active_scan.py
 
-      - name:  Lancer Scan Authentification ZAP
+      - name: Lancer Scan Authentification ZAP
         run: python tests/form_autentification.py
 
       - name: 📧 Envoyer une notification en cas de succès
@@ -61,10 +74,10 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "[SUCCÈS] Pipeline Jenkins - Tests réussis !"
+          subject: "[SUCCÈS] Pipeline - Tests réussis !"
           to: "aboulayesamb@gmail.com"
           from: "GitHub Actions"
-          body: "Tous les tests Selenium et ZAP ont réussi. Consulte Jenkins pour plus d'infos."
+          body: "Tous les tests Selenium et ZAP ont réussi. Consulte les logs pour plus d'infos."
 
       - name: 📧 Envoyer une notification en cas d'échec
         if: failure()
@@ -74,8 +87,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.EMAIL_USER }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "❌ [ÉCHEC] Pipeline Jenkins - Tests échoués !!"
+          subject: "❌ [ÉCHEC] Pipeline - Tests échoués !!"
           to: "aboulayesamb@gmail.com"
           from: "GitHub Actions"
-          body: "Certains tests ont échoué. Consulte Jenkins pour voir les logs."
-
+          body: "Certains tests ont échoué. Consulte les logs GitHub Actions."
