--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,96 +1,54 @@
-name: CI Pipeline GestionNote
+name: CI Pipeline
 
 on:
   schedule:
-    - cron: "0 */12 * * *"  # Exécute toutes les 12 heures
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    - cron: "0 */6 * * *"  # Exécution toutes les 6 heures
+  workflow_dispatch:  # Permet d'exécuter le workflow manuellement
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Exécute le job sur un runner Windows
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Clone le repo GitHub
 
-      - name: Installer PHP et Composer
+      - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
           tools: composer
-          coverage: none
 
-      - name: Installer les dépendances PHP
-        run: composer install --no-progress --no-interaction
+      - name: Install Dependencies
+        run: composer install
 
-      - name: Installer Python et dépendances Selenium/ZAP
-        uses: actions/setup-python@v4
+      - name: Build Stage
+        run: echo "Build stage: Compilation / Packaging (si nécessaire)"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'  # Adaptez à votre version Python
 
-      - name: Installer les dépendances Python
+      - name: Install Selenium Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
-         
 
-      - name: Installer Google Chrome et ChromeDriver
-        run: |
-          sudo apt update
-          sudo apt install -y google-chrome-stable
-          CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
-          DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
-          wget -N "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
-
-      - name: Vérifier installation Chrome et ChromeDriver
-        run: |
-          google-chrome --version
-          chromedriver --version
-
-      - name: Exécuter les tests Selenium (Test 1)
+      - name: Run Selenium Test 1
         run: python tests/selenium_tests.py
 
-      - name: Exécuter les tests Selenium (Test 2)
+      - name: Run Selenium Test 2
         run: python tests/selenium_test_pack_or.py
 
-      - name: 🕷 Lancer Spider ZAP
+      - name: Run Spider Test (ZAP)
         run: python tests/spider.py
 
-      - name: Lancer Scan Actif ZAP
+      - name: Run Active Scan (ZAP)
         run: python tests/active_scan.py
 
-      - name: Lancer Scan Authentification ZAP
+      - name: Run Form Authentication Test (ZAP)
         run: python tests/form_autentification.py
 
-      - name: 📧 Envoyer une notification en cas de succès
-        if: success()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{ secrets.EMAIL_USER }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "[SUCCÈS] Pipeline - Tests réussis !"
-          to: "aboulayesamb@gmail.com"
-          from: "GitHub Actions"
-          body: "Tous les tests Selenium et ZAP ont réussi. Consulte les logs pour plus d'infos."
-
-      - name: 📧 Envoyer une notification en cas d'échec
-        if: failure()
-        uses: dawidd6/action-send-mail@v3
-        with:
-          server_address: smtp.gmail.com
-          server_port: 465
-          username: ${{ secrets.EMAIL_USER }}
-          password: ${{ secrets.EMAIL_PASSWORD }}
-          subject: "❌ [ÉCHEC] Pipeline - Tests échoués !!"
-          to: "aboulayesamb@gmail.com"
-          from: "GitHub Actions"
-          body: "Certains tests ont échoué. Consulte les logs GitHub Actions."
+      - name: Final Step
+        run: echo "Pipeline terminé"
