--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -34,20 +34,13 @@ jobs:
           python-version: '3.10'
 
       - name: Installer les dépendances Python
-        run: |
-          pip install -r requirements.txt
-         
+        run: pip install -r requirements.txt
 
       - name: Installer Google Chrome et ChromeDriver
         run: |
           sudo apt update
-          sudo apt install -y google-chrome-stable
-          CHROME_VERSION=$(google-chrome --version | awk '{print $3}')
-          DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
-          wget -N "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+          sudo apt install -y google-chrome-stable chromium-chromedriver
+          sudo ln -sf /usr/lib/chromium-browser/chromedriver /usr/local/bin/chromedriver
 
       - name: Vérifier installation Chrome et ChromeDriver
         run: |
