--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -25,12 +25,12 @@ jobs:
       - name: 🐳 Vérifier Docker
         run: docker version
 
-      - name: 🛠 Télécharger l'image OWASP ZAP
-        run: docker pull owasp/zap2docker-stable
+      - name: 🛠 Télécharger l'image OWASP ZAP (nouveau dépôt)
+        run: docker pull ghcr.io/zaproxy/zap-stable
 
       - name: 🐳 Lancer OWASP ZAP en mode headless
         run: |
-          docker run -d --name zap -p 8080:8080 owasp/zap2docker-stable zap.sh -daemon -port 8080
+          docker run -d --name zap -p 8080:8080 ghcr.io/zaproxy/zap-stable zap.sh -daemon -port 8080
           sleep 15 # Laisser ZAP démarrer
 
       - name: 📜 Vérifier les logs de ZAP
