--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -25,6 +25,9 @@ jobs:
       - name: 🐳 Vérifier Docker
         run: docker version
 
+      - name: 🔑 Se connecter à GHCR (GitHub Container Registry)
+        run: echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ secrets.GHCR_USERNAME }} --password-stdin
+
       - name: 🛠 Télécharger l'image OWASP ZAP (nouveau dépôt)
         run: docker pull ghcr.io/zaproxy/zap-stable
 
