--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -29,18 +29,18 @@ jobs:
         run: |
           docker run -d --name zap -p 8080:8080 zaproxy/zap-stable zap.sh -daemon -port 8080
           echo "⏳ Attente du démarrage de ZAP..."
-          for i in {1..10}; do
+
+          # Boucle jusqu'à ce que ZAP soit prêt
+          while true; do
             if curl -s http://127.0.0.1:8080 > /dev/null; then
               echo "✅ OWASP ZAP est prêt !"
-              exit 0
+              break
             fi
-            echo "⏳ ZAP n'est pas encore prêt... Nouvelle tentative dans 5 secondes"
+            echo "⏳ ZAP n'est pas encore prêt... Vérification dans 5 secondes"
             sleep 5
           done
-          echo "❌ Échec : ZAP ne répond toujours pas après 50 secondes."
-          exit 1
 
-      - name: 📜 Vérifier les logs de OWASP ZAP avant les tests
+      - name: 📜 Vérifier les logs de OWASP ZAP
         run: docker logs zap
 
       - name: 🛠 Installer les dépendances Python
